# PyTrader

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cookie.txt  mkdocs.yml  pyproject.toml  requirements.txt  watch.json
docs/: about.md  index.md
docs/api/: authentication.md  endpoints.md
docs/development/: setup.md  testing.md
docs/getting-started/: installation.md  quickstart.md
frontend/: package.json  tsconfig.json
frontend/src/routes/: +page.svelte
src/: api.py  main.py  main.tcss
src/PyTrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: main.py  security.py
src/app.egg-info/: PKG-INFO  SOURCES.txt
src/app/templates/: home.html  login.html
src/auth/: model.py  security.py
src/static/css/: styles.css
src/templates/: home.html
src/templates/auth/: login.html
tests/: test_alpaca_service.py  test_backtest.py  test_main.py  test_playwright.py
