[project]
name = "alpaca-tui-trader"
version = "0.1.0"
description = "A TUI application for trading with Alpaca API"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "click",
    "textual",
    "colorama",
    "alpaca-trade-api",
    "python-dotenv", # For managing API keys
    "ratelimit",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio", # For testing async code (Textual)
  "respx", # For mocking HTTP requests (Alpaca API)
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "TID"] # Enable Flake8, Pyflakes, Pycodestyle, isort, pyupgrade, Pylint, flake8-tidy-imports
ignore = ["E501"] # Ignore line too long, handled by formatter

[tool.ruff.format]
quote-style = "double" # Use double quotes

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# This section can be used if we want uv to manage the environment directly
# but for now, we'll use venv and pip as per the Makefile for broader compatibility.
# Uv will be used for dependency resolution via `uv pip compile` if we add that to Makefile.
