[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.12"

[project]
name = "PyTrader"
version = "0.0.1"
dependencies = [
    "fastapi",
    "uvicorn",
    "bcrypt==4.0.1",
    "passlib",
    "python-multipart",
    "pyjwt",
    "python-dotenv",
    "jinja2"
]

[project.optional-dependencies]
dev = ["pytest", "playwright", "mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
